# libcqlclient

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  libcqlclient-0.0.pc.in
src/: Makefile.am  cql.c  cql.h
