AC_INIT([libcqlclient], [0.1], [brent@bantamlabs.com], [libcqlclient], [http://github.com/brenttheisen/libcqlclient/])
LT_INIT
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
AM_PROG_CC_C_O
AC_CONFIG_FILES([Makefile src/Makefile libcqlclient-0.0.pc])
AC_OUTPUT
